--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,12 @@
-# Core Data Science
-pandas
-numpy
-scikit-learn
 
-# Visualization
-matplotlib
-seaborn
-
-# Statistical Analysis
-scipy
-statsmodels
-
-# Model Explainability
-shap
-
-# Jupyter Notebooks
-jupyter
-
-# Data Version Control
-dvc
-
-# File & YAML utilities
-pyyaml
+pandas>=2.0.0
+numpy>=1.24.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+scikit-learn>=1.3.0
+xgboost>=2.0.0
+shap>=0.44.0
+joblib>=1.3.0
+jupyter>=1.0.0
+pytest>=7.0.0
+dvc>=3.0.0
